--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,17 +1,17 @@
 footer {
-  background-color: #222;
-  height: 60px;
-  padding: 10px 40px;
+  background-color: rgb(29, 71, 126);
+  height: 50px;
+  padding: 0 20px 20px 40px;
   color: white;
   width: 100%;
   position: fixed;
   left: 0;
   bottom: 0;
-  text-align: center;
 }
 
 .footer-title {
-  font-weight: 400px;
+  font-weight: 400;
   font-size: 30px;
   float: left;
+  margin-bottom: 10px;
 }
