--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 header {
-  background-color: #222;
+  background-color: rgb(29, 71, 126);
   height: 60px;
   padding: 10px 40px;
   color: white;
@@ -11,7 +11,23 @@ header {
 }
 
 .header-title {
-  font-weight: 400px;
-  font-size: 30px;
+  font-weight: 400;
+  font-size: 50px;
   float: left;
+  margin-top: 0px;
+}
+
+@media only screen and (max-width: 600px) {
+
+  header {
+    height: 35px;
+    margin: 0;
+  }
+
+  .header-title {
+    font-size: 35px;
+    margin-left: -30px;
+    text-align: start;
+  }
+
 }
