--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-image: url('images/hero1.jpeg');
+  background-color: rgba(42, 95, 145, 0.6);
+  background-blend-mode: multiply;
+  background-position: left top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 0;
 }
