--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,6 +8,7 @@ header {
   left: 0;
   top: 0;
   text-align: center;
+  z-index: 2;
 }
 
 .header-title {
@@ -15,7 +16,43 @@ header {
   font-size: 50px;
   float: left;
   margin-top: 0px;
+  color: white;
 }
+
+/* Navigation ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
+.topnav {
+  overflow: hidden;
+  float: right;
+  margin-right: 200px;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 25px;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.topnav a:hover {
+  color: yellow;
+}
+
+
+
+
+/* Media Queries ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 
 @media only screen and (max-width: 600px) {
 
@@ -25,9 +62,36 @@ header {
   }
 
   .header-title {
-    font-size: 35px;
+    font-size: 25px;
     margin-left: -30px;
     text-align: start;
   }
 
+
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
 }
