--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url('images/hero1.jpeg');
+  /* background-image: url('images/hero1.jpeg'); */
   background-color: rgba(42, 95, 145, 0.6);
+  background-color: rgb(29, 29, 29);
   background-blend-mode: multiply;
   background-position: left top;
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 0;
+  color: black;
 }
