--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,3 +1,6 @@
+main {
+  height: 140%;
+}
 p, p.p2 {
   width: 80vw;
   margin: 0 auto;
@@ -11,27 +14,8 @@ p.p2 {
   margin: 30px auto;
 }
 
-button {
-  cursor: pointer;
-  margin:  5px auto 30px auto;
-  font-size: 20px;
-  width: 200px;
-  height: 30px;
-  padding-bottom: 2px;
-  border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-}
-
-button:hover {
-  color: white;
-  background: rgb(29, 71, 126);
-}
-
 .main-title {
-  margin: 130px auto 50px auto;
+  margin: 180px auto 50px auto;
   color: white;
   font-size: 45px;
   font-weight: 400;
