--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -15,30 +15,30 @@ footer {
   font-size: 30px;
   float: left;
   margin-bottom: 10px;
+  margin-top: 20px;
 }
-/* 
-#footer-email {
-  height: 38px;
-}
-#footer-linkedIn {
-  height: 35px;
-}
-#footer-github {
-  height: 38px;
-} */
 
 .footer-item {
-  margin: 20px 20px 40px 20px;;
+  margin: 32px 20px 10px 60px;
   display: inline-block;
   color: white;
+  /* float: right; */
 }
 .footer-item i {
   color: white;
   font-size: 30px;
   margin: -10px auto 5px auto;
+  transition: 0.8s;
 }
-
 
 .footer-item i:hover {
   color: yellow;
+  transition: 0.8s;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .footer-item {
+    margin-left: 22px;
+  }
 }
