--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,45 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  /* background-image: url('images/hero1.jpeg'); */
-  background-color: rgba(42, 95, 145, 0.6);
-  background-color: rgb(29, 29, 29);
+  background-image: url('images/hero1.jpeg');
+  background-color: rgb(67, 84, 107);
   background-blend-mode: multiply;
   background-position: left top;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100vw;
   z-index: 0;
-  color: black;
+}
+
+button {
+  color: yellow;
+  margin-top: 50px;
+  background: transparent;
+  border: thin white solid;
+  cursor: pointer;
+  text-align: center;
+  font-size: 120%;
+  width: 7.5em;
+  height: 50px;
+  font-weight: 200;
+  transition: 0.8s;
+  border-radius: 3px!important;
+  -webkit-border-radius: 3px!important;
+  -moz-border-radius: 3px!important;
+  -ms-border-radius: 3px!important;
+  -o-border-radius: 3px!important;
+}
+
+button:hover {
+  background-color:  rgb(29, 71, 126);
+  color: yellow;
+  border: thin yellow solid;
+  transition: 0.8s;
+}
+
+
+button:active {
+  background-color: rgb(255, 255, 255);
+  color: yellow;
+  border: thin rgb(62, 88, 93) solid;
+  transition: 0.8s;
 }
