--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 body {
-  margin: 0;
+  margin: -100px 0 0 0;
   padding: 0;
-  font-family: sans-serif;
-  background-image: url('images/hero1.jpeg');
+  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+  /* background-image: url('images/hero1.jpeg');
   background-color: rgb(67, 84, 107);
   background-blend-mode: multiply;
   background-position: left top;
   background-repeat: no-repeat;
-  background-size: 100vw;
+  background-size: 100vw; */
   z-index: 0;
 }
 
