--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,13 @@
 body {
   margin: -100px 0 0 0;
   padding: 0;
-  /* font-family: 'Noto Serif', serif; */
   font-family: 'Chau Philomene One', sans-serif; 
-  /* font-family: 'Assistant', sans-serif; */
-  /* background-image: url('images/hero1.jpeg');
-  background-color: rgb(67, 84, 107);
-  background-blend-mode: multiply;
-  background-position: left top;
-  background-repeat: no-repeat;
-  background-size: 100vw; */
   z-index: 0;
 }
 h1 {
-  /* font-family: 'Segoe UI', Tahoma, Verdana, sans-serif; */
   font-family: 'Chau Philomene One', sans-serif;
-/* font-family: 'PT Serif Caption', serif; */
-
-/* font-family: 'Merriweather Sans', sans-serif; */
   font-weight: thin;
-  /* font-stretch: expanded; */
+  font-stretch: expanded;
 }
 
 h2 {
