--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -33,15 +33,21 @@ p, p.p2 {
   font-size: 30px;
   color: white;
   max-width: 600px;
-  text-align: justify;
+  text-align: center;
 }
 
 p.p2 {
   font-size: 10px;
 }
 
+p.p2.left.about {
+  font-size: 190%;
+  margin: auto;
+}
+
+
 #about {
-  margin-top: -360px;
+  margin-top: -320px;
   background-image: url('../../images/hero4.jpg');
   background-color: rgb(67, 84, 107);
   background-blend-mode: multiply;
@@ -68,7 +74,7 @@ p.p2 {
   }
 
   p.p2{
-    text-align: start;
+    text-align: center;
     font-size: 20px;
     margin: 35px auto;
   }
@@ -77,4 +83,57 @@ p.p2 {
     margin: -50px auto 100px auto;
   }
 
+  .about-title {
+    margin-top: 400px;
+    padding: 50px 0;
+    font-size: 38px;
+    line-height: 110%;
+  }
+
+  p.p2.left.about {
+    font-size: 190%;
+    margin-left: 20px;
+  }
+
+}
+
+@media only screen and (max-width: 600px) {
+  .about-title {
+    margin-top: 400px;
+  }
+
+  #about {
+    margin-top: -360px;
+    background-image: url('../../images/hero4-sm.jpeg');
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .about-title {
+    margin-top: 400px;
+    padding: 50px 0;
+    font-size: 38px;
+    line-height: 110%;
+  }
+
+  p.p2.left.about {
+    font-size: 150%;
+    margin-left: 20px;
+    margin-top: -60px;
+  }
+
+}
+
+@media only screen and (min-width: 400px) {
+  .about-title {
+    margin-top: 400px;
+    padding: 100px 0 50px 0;
+    font-size: 38px;
+    line-height: 110%;
+  }
+
+  p.p2.left.about {
+    font-size: 170%;
+    /* margin-left: 20px; */
+  }
 }
