--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -85,6 +85,9 @@ nav .navNarrow .narrowLinks a {
   width: 50%;
 }
 
+/* Media Queries ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
+
+
 
 @media only screen and (min-width: 440px) {
   nav .navWide {
@@ -113,13 +116,32 @@ nav .navNarrow .narrowLinks a {
     height: 200%;
   }
 
+
+  nav .navNarrow i {
+    margin-right: 70px;
+  }
+
 }
 
-/* Media Queries ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
+@media only screen and (max-width: 690px) {
+
+
+  .header-title {
+    margin-left: -30px;
+  }
+
+  nav .navWide {
+    margin-right: 50px;
+  }
+
+  nav .wideDiv a {
+    margin: 5px 0 0 10px;
+  }
+
+}
 
 
 @media only screen and (max-width: 600px) {
-
 
   header {
     height: 45px;
@@ -127,19 +149,25 @@ nav .navNarrow .narrowLinks a {
   }
 
   .header-title {
-    font-size: 35px;
+    font-size: 38px;
     margin-left: -30px;
+    margin-top: -5px;
     text-align: start;
     padding-bottom: 15px;
   }
 
+  nav {
+    margin-right: -20px;
+  }
+
   nav .navWide {
+    margin-top: 0;
     padding: 0;
-    font-size: 30px;
+    font-size: 25px;
   }
 
   nav .navNarrow i {
-    margin-right: 60px;
+    margin-right: 100px;
     margin-top: 7px;
   }
 
@@ -153,8 +181,22 @@ nav .navNarrow .narrowLinks a {
     width: 100%;
     margin-right: 42px;
     font-size: 28px;
-    margin-top: -45px;
+    margin-top: -35px;
     padding: 5%;
   }
 
+
 }
+
+@media only screen and (max-width: 350px) {
+  .navNarrow {
+    margin-right: -30px;
+  }
+
+  .header-title {
+    font-size: 220%;
+    margin-left: -35px;
+  }
+}
+
+
