--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -48,7 +48,7 @@ p.p2 {
   }
 
   .main-title {
-    padding: 190px 0 50px 0;
+    padding: 120px 0 50px 0;
   }
 
   p {
@@ -71,7 +71,9 @@ p.p2 {
 
 @media only screen and (max-width: 600px) {
   .main-title {
-    margin-top: 40px;
+    margin-top: 400px;
+    font-size: 40px;
+    padding-top: 80px;
   }
 }
 
@@ -84,7 +86,8 @@ p.p2 {
   }
 
   p.p2.left{
-    margin: -50px 0 50px 50px;
+    margin: -20px 0 60px 20px;
+    text-align: center;
   }
 
 }
