--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -59,6 +59,10 @@ p.p2.left.about {
 
 @media only screen and (max-width: 550px) {
 
+section {
+  height: 95vh;
+}
+
   p, p.p2,
   .about-title {
     width: 300px;
@@ -104,6 +108,7 @@ p.p2.left.about {
 
   #about {
     margin-top: -360px;
+    margin-bottom: 20px;
     background-image: url('../../images/hero4-sm.jpeg');
   }
 }
@@ -119,7 +124,7 @@ p.p2.left.about {
   p.p2.left.about {
     font-size: 150%;
     margin-left: 20px;
-    margin-top: -60px;
+    margin-top: 0;
   }
 
 }
@@ -127,13 +132,13 @@ p.p2.left.about {
 @media only screen and (min-width: 400px) {
   .about-title {
     margin-top: 400px;
-    padding: 30px 0 150px 0;
-    font-size: 38px;
+    padding: 30px 5px 20px 5px;
+    font-size: 35px;
     line-height: 110%;
   }
 
   p.p2.left.about {
     font-size: 170%;
-    /* margin-left: 20px; */
+    margin-bottom: 10px;
   }
 }
