--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,20 +1,3 @@
-/*
-#about {
-   background: #0b4c84d9;
-  height: fit-content;
-  margin-top: -250px;
-  margin-bottom: 60px; 
-  margin-top: -360px;
-  background-image: url('../../images/hero4.jpg');
-  background-color: rgb(67, 84, 107);
-  background-blend-mode: multiply;
-  background-position: left top;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 0;
-}
-*/
-
 section {
   height: 90vh;
 }
@@ -124,7 +107,7 @@ section {
   p.p2.left.about {
     font-size: 150%;
     margin-left: 20px;
-    margin-top: 0;
+    margin-top: -60px;
   }
 
 }
@@ -139,6 +122,6 @@ section {
 
   p.p2.left.about {
     font-size: 170%;
-    margin-bottom: 10px;
+    padding-bottom: 100px;
   }
 }
