--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -4,7 +4,8 @@ h1 {
 
 h2 {
   color: yellow;
-  margin: 20px auto;
+  margin: 100px 30px 0 auto;
+  font-size: 30px;
 }
 
 p, p.p2 {
@@ -18,20 +19,41 @@ p, p.p2 {
 }
 
 p.p2 {
-  margin: 30px auto;
+  margin: 0 auto 130px auto;
   font-size: 180%;
+}
+
+p.p2.desc {
+  padding: 10px 0 35px 30px;
+  font-size: 25px;
+}
+
+p.p2.stack {
+  padding: 0 20px;
+  font-size: 25px;
+  margin-top: -150px;
+  margin-left: 30px;
+}
+
+p.p2.stack li {
+  list-style-type: circle;
+}
+
+blockquote {
+  margin-top: 5px;
 }
 
 .project-block {
   display: inline-block;
-  margin: 50px auto 150px auto;
+  /* margin: 30px auto 150px 80px; */
+  margin-bottom: 180px;
 }
 
 .project-title {
   margin: 150px auto 50px auto;
   padding-top: 60px;
   color: white;
-  font-size: 45px;
+  font-size: 40px;
   font-weight: 400;
 }
 
@@ -43,8 +65,9 @@ p.p2 {
 
 .project-desc {
   display: inline-block;
-  margin: 10px;
+  margin: -100px 10px 0 10px;
 }
+
 .logo-icon {
   height: 350px;
   width:350px;
@@ -52,10 +75,20 @@ p.p2 {
   padding-top: 60px;
   margin-bottom: 1px;
 }
+
 .project-image img {
   height: 450px;
   margin-top: 60px;
+  margin-bottom: -110px;
 }
+
+
+.project-image.ccs img {
+  height: 450px;
+  margin-top: 60px;
+  margin-bottom: -200px;
+}
+
 .project-image.app img {
   height: 340px;
   margin-left: 10px;
@@ -64,11 +97,15 @@ p.p2 {
 .project-button button{
   float: left;
   margin-left: 100px;
+  margin-top: -100px;
+  margin-bottom: -100px;
 }
 
 .repo-button button {
   float: right;
   margin-right: 100px;
+  margin-top: -100px;
+  margin-bottom: -100px;
 }
 
 #projects {
@@ -94,14 +131,18 @@ p.p2 {
 
 @media only screen and (max-width: 600px) {
 
-.project-block {
-  margin: -80px auto 150px auto;
-}
+  .project-block {
+    margin: -80px auto 150px auto;
+  }
 
   .project-image img {
     height: 220px;
     padding-top: 10px;
-    /* margin: -8em 0 -5em -100px; */
+  }
+
+  .project-image.ccs img {
+    padding-bottom: 200px;
+    height: 280px;
   }
 
   .project-image.app img {
@@ -110,8 +151,39 @@ p.p2 {
   }
 
   p, p.p2 {
-    /* margin: 0; */
     text-align: start;
   }
 
+
+  .project-button button {
+    margin: 0;
+  }
+
+  .repo-button button {
+    margin: 0 20px 0 0;
+  }
+  
 }
+
+@media only screen and (max-width: 1024px) {
+
+  .project-image img {
+    padding-bottom: 130px;
+    height: 320px;
+  }
+
+  .project-image.ccs img {
+    padding-bottom: 200px;
+    height: 280px;
+  }
+
+}
+
+@media only screen and (max-width: 400px) {
+
+  .project-image.ccs img, .project-image.app img {
+    height: 180px;
+  }
+
+}
+
