--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,7 @@
 header {
-  background-color: rgb(29, 71, 126);
+  /* background-color: rgb(29, 71, 126);
+   */
+  background-color: rgb(32, 46, 68);
   height: 60px;
   padding: 10px 40px;
   color: white;
@@ -22,7 +24,7 @@ header {
 /* +++++++++++ Nav ++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 nav {
   /* overflow: hidden; */
-  background-color: rgb(29, 71, 126);
+  background-color: rgb(32, 46, 68);
   transition: 0.8s;
 }
 
@@ -80,7 +82,7 @@ nav .navNarrow .narrowLinks a {
   float: right;
   clear: both;
   margin: 10px 100px 30px 0;
-  background-color: rgb(29, 71, 126);
+  background-color: rgb(32, 46, 68);
   height: 200%;
   width: 50%;
 }
@@ -93,7 +95,7 @@ nav .navNarrow .narrowLinks a {
   nav .navWide {
     display: block;
     transition: 0.8s;
-    background-color: rgb(29, 71, 126);
+    background-color: rgb(32, 46, 68);
     padding: 10px;
     float: right;
     margin-right: 100px;
@@ -112,7 +114,7 @@ nav .navNarrow .narrowLinks a {
     float: right;
     clear: left;
     padding: 0.5em 0;
-    background-color: rgb(29, 71, 126);
+    background-color: rgb(32, 46, 68);
     height: 200%;
   }
 
