--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -3,7 +3,8 @@ h1 {
 }
 
 h2 {
-  color: yellow;
+  /* color: yellow; */
+  color: #141414;
   margin: 100px 30px 0 auto;
   font-size: 30px;
 }
@@ -29,10 +30,12 @@ p.p2.desc {
 }
 
 p.p2.stack {
+  color: rgb(32, 46, 68);
   padding: 0 20px;
   font-size: 25px;
   margin-top: -150px;
   margin-left: 30px;
+  font-weight: 600;
 }
 
 p.p2.stack li {
@@ -41,6 +44,8 @@ p.p2.stack li {
 
 blockquote {
   margin-top: 5px;
+  color: white;
+  font-weight: 300;
 }
 
 .project-block {
@@ -109,7 +114,8 @@ blockquote {
 
 #projects {
   margin: 50px auto 0 auto;
-  background-color: #0b4c84d9;
+  /* background-color: #0b4c84d9; */
+  background-color: #385F71;
 }
 
 #project_img {
