--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,13 +1,14 @@
 footer {
   background-color: rgb(32, 46, 68);
   height: 50px;
-  padding: 0 20px 20px 40px;
+  padding-bottom: 20px;
   color: white;
   width: 100%;
   position: fixed;
   left: 0;
   bottom: 0;
   display: inline-block;
+  text-align: center;
 }
 
 .footer-title {
@@ -18,15 +19,23 @@ footer {
   margin-top: 20px;
 }
 
+.social-links {
+  /* margin: 0 auto; */
+  margin: 20px auto 10px auto;
+  width: 100%;
+  text-align: center;
+}
+
 .footer-item {
-  margin: 32px 20px 10px 60px;
+  /* margin: 32px 20px 10px 60px; */
   display: inline-block;
   color: white;
   /* float: right; */
+  margin: 0 30px;
 }
 .footer-item i {
   color: white;
-  font-size: 30px;
+  font-size: 45px;
   margin: -10px auto 5px auto;
   transition: 0.8s;
 }
