--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -66,7 +66,7 @@ p.p2.heading {
   }
 
   button {
-    margin: -50px auto 30px auto;
+    margin: -80px auto 30px auto;
   }
 
 }
@@ -90,6 +90,10 @@ p.p2.heading {
   p.p2.left{
     margin: -50px 0 60px 30px;
     text-align: center;
+  }
+
+  p.p2.heading {
+    margin-bottom: 40px;
   }
 
 }
