--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,11 +1,11 @@
 main {
-  height: 100vh;
-  padding-bottom: 50px;
+  height: 90vh;
+  /* padding: 100px 0; */
 }
 
 .main-title {
-  margin: 440px auto 50px auto;
-  padding-top: 100px; 
+  margin: 80px auto 50px auto;
+  padding-top: 50px; 
   color: white;
   font-size: 45px;
   font-weight: 400;
@@ -25,7 +25,7 @@ p.p2.heading {
 }
 
 #home {
-  margin-top: -360px;
+  margin-top: -20px;
   background-image: url('../../images/hero3.jpg');
   background-color: rgb(67, 84, 107);
   background-blend-mode: multiply;
@@ -73,15 +73,15 @@ p.p2.heading {
 
 @media only screen and (max-width: 600px) {
   .main-title {
-    margin-top: 400px;
+    margin-top: 40px;
     font-size: 40px;
-    padding-top: 80px;
+    padding-top: 20px;
   }
 }
 
 @media only screen and (max-width: 420px) {
   .main-title {
-    margin-top: 420px;
+    margin-top: 60px;
     padding: 50px 0;
     font-size: 38px;
     line-height: 110%;
