--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 body {
-  margin: -100px 0 0 0;
+  margin: 0;
   padding: 0;
   font-family: 'Chau Philomene One', sans-serif; 
   z-index: 0;
+  background-size: contain;
 }
 h1 {
   font-family: 'Chau Philomene One', sans-serif;
