--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -19,6 +19,7 @@ header {
   float: left;
   margin-top: 0px;
   color: white;
+  margin-left: 70px;
 }
 
 /* +++++++++++ Nav ++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
