--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -215,8 +215,15 @@ button {
 
   .project-image.app img {
     padding-bottom: 200px;
-    height: 400px;
-    margin-left: 30px;
+    height: 500px;
+    margin-left: 75px;
+    margin-bottom: 75px;
+    margin-top: -25px;
+  }
+
+
+  .project-desc .app {
+    margin-top: 160;
   }
 
 }
