--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -171,7 +171,6 @@ button {
   clear: right;
 }
 
-
 @media only screen and (max-width: 1024px) {
 
   .project-image img {
@@ -252,7 +251,7 @@ button {
 
 @media only screen and (max-width: 600px) {
 
-  .project-block, hr {
+  .project-block {
     margin: -80px auto 70px auto;
   }
 
@@ -303,7 +302,7 @@ button {
 
 }
 
-@media only screen and (max-width: 460px) {
+@media only screen and (max-width: 480px) {
 
   h2 {
     font-size: 25px;
