added bottom margin to last project in list

--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -328,7 +328,7 @@ button {
 
   .project-block.app {
     margin-top: 120px;
-    margin-bottom: 0;
+    margin-bottom: 40px;
   }
 
   .project-image.app img {
