--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -173,9 +173,16 @@ button {
 
 @media only screen and (max-width: 1024px) {
 
+  ul > li {
+    font-size: 12px;
+    padding: 5px;
+  }
+
   .project-image img {
-    height: 470px;
-    margin: 65px auto 65px 195px;
+    /* height: 470px; */
+    /* margin: 65px auto 65px 195px; */
+    height: 358px;
+    margin-left: 27px;
   }
 
   .project-image.ccs img {
@@ -187,7 +194,7 @@ button {
   .project-image.app img {
     padding-bottom: 200px;
     height: 370px;
-    margin-left: 200px; 
+    margin-left: 27px; 
     margin-bottom: 75px;
     margin-top: -200px;
   }
@@ -197,23 +204,35 @@ button {
   }
 
   .project-desc.desktop-mobile {
-    margin-top: 210px;
+    margin-top: 1px;
+    margin-left: 10px;
+    width: 50%;
+  }
+
+  .project-block.ccs {
+    margin-top: 110px;
   }
 
   .project-desc.ccs {
-    margin-top: 80px;
+    margin-top: -130px;
+  }
+
+  .project-block.app {
+    margin-top: 290px;
+    margin-bottom: 100px;
   }
 
   .project-desc.app {
-    margin-top: -140;
+    margin-top: -90px;
+    width: 50%;
   }
 
   .app-h2 {
     margin-top: -110px;
   }
 
-  .project-button button {
-    margin-left: 220px;
+  .project-button {
+    margin-left: -50px;
   }
 
 }
